routes/api-example-com-root-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com-root-route
  namespace: kgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
      # Bind to a specific listener in the parentRef (Gateway) using sectionName field.
      # sectionName: foo
  hostnames:
    - "api.example.com"
  rules:
  - matches:  
    - path:
        type: PathPrefix
        value: /trackapi/v1.0/
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    # Delegate to another HTTPRoute
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tracks-v1-apiproduct
      namespace: tracks
  - matches:  
    - path:
        type: PathPrefix
        value: /trackapi/v2.0/
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    # Delegate to another HTTPRoute
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tracks-v2-apiproduct
      namespace: tracks
  - name: httpbin-v1.0
    matches:  
    - path:
        type: PathPrefix
        value: /httpbin/v1.0/
      # method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    # Delegate to another HTTPRoute
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-apiproduct
      namespace: httpbin
  - name: httpbin-2-v1.0
    matches:  
    - path:
        type: PathPrefix
        value: /httpbin-2/v1.0/
      # method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    # Delegate to another HTTPRoute
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-apiproduct-2
      namespace: httpbin
  # - matches:  
  #   - path:
  #       type: PathPrefix
  #       value: /lambda/
  #   filters:
  #   # The URLRewrite in the parent technically works (from a "proxy perspective"), 
  #   # but the Portal will not correctly stitch the schema if we do not set on the child route as well.
  #   - type: URLRewrite
  #     urlRewrite:
  #       path:
  #         type: ReplacePrefixMatch
  #         replacePrefixMatch: /
  #   - type: ExtensionRef
  #     extensionRef:
  #       group: gateway.solo.io
  #       kind: RouteOption
  #       name: routeoption-apiproducts
  #   backendRefs:
  #   # Delegate to another HTTPRoute
  #   - group: gateway.networking.k8s.io
  #     kind: HTTPRoute
  #     name: lambda-apiproduct
  #     namespace: gloo-system
  - matches:  
    - path:
        type: PathPrefix
        value: /mypetstore/
    filters:
    # The URLRewrite in the parent technically works (from a "proxy perspective"), 
    # but the Portal will not correctly stitch the schema if we do not set on the child route as well.c
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    # Delegate to another HTTPRoute
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      # name: httpbin-apiproduct
      # namespace: httpbin
      name: petstore-apiproduct
      namespace: petstore
  # - matches:  
  #   - path:
  #       type: PathPrefix
  #       value: /quarkus/
  #   filters:
  #   # The URLRewrite in the parent technically works (from a "proxy perspective"), 
  #   # but the Portal will not correctly stitch the schema if we do not set on the child route as well.c
  #   # - type: URLRewrite
  #   #   urlRewrite:
  #   #     path:
  #   #       type: ReplacePrefixMatch
  #   #       replacePrefixMatch: /
  #   - type: ExtensionRef
  #     extensionRef:
  #       group: gateway.solo.io
  #       kind: RouteOption
  #       name: routeoption-apiproducts
  #   backendRefs:
  #   # Delegate to another HTTPRoute
  #   - group: gateway.networking.k8s.io
  #     kind: HTTPRoute
  #     name: quarkus-apiproduct
  #     namespace: quarkus
