routes/keycloak-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-example-com
  namespace: keycloak
  labels:
    app: keycloak
spec:
  parentRefs:
  - name: gw
    namespace: ingress-gw
  hostnames:
  - "keycloak.example.com"
  rules:
  - backendRefs:
    - name: keycloak
      namespace: keycloak
      port: 80
