routes/pgadmin-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pgadmin-example-com
  namespace: kgateway-system
  labels:
    app: pgadmin
spec:
  parentRefs:
  - name: gw
    namespace: ingress-gw
  hostnames:
  - "pgadmin.example.com"
  rules:
  - backendRefs:
    - name: pgadmin
      namespace: kgateway-system
      port: 8080
